--- a/.eslintrc
+++ b/.eslintrc
@@ -1,3 +1,10 @@
 {
-  "extends": "rallycoding"
+  "extends": "rallycoding",
+  "rules": {
+    "quotes": 0,
+    "no-underscore-dangle": "off",
+    "no-unused-vars": "off",
+    "import/no-extraneous-dependencies": "off",
+    "arrow-body-style": "off"
+  }
 }
