--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
 		"test": "jest"
 	},
 	"dependencies": {
+		"lodash": "^4.17.4",
+		"moment": "^2.18.1",
 		"react": "16.0.0-alpha.12",
 		"react-native": "0.45.1",
 		"react-native-elements": "^0.13.0",
 		"react-native-fbsdk": "0.6.0",
+		"react-native-progress": "^3.2.1",
 		"react-native-vector-icons": "^4.2.0",
 		"react-navigation": "^1.0.0-beta.11",
 		"react-redux": "^5.0.5",
